[package]
name = "models"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
prettyplease = "0.2.16"
sea-orm = { workspace = true }

[build-dependencies]
sea-orm-codegen = { version = "0.12.14" }
sea-schema = { version = "0.14.2", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "discovery",
    "writer",
] }
sqlx = { version = "0.7.4", default-features = false, features = [
    "runtime-tokio-rustls",
    "mysql",
] }
tokio = { version = "1.36.0" }
url = { version = "2.5.0" }
