[package]
name = "sessions"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
async-graphql = { version = "7.0.2", default-features = false, features = [
    "graphiql",
    "tracing",
] }
async-graphql-axum = { version = "7.0.2" }
axum = { version = "0.7.4", features = ["ws"] }
clap = { version = "4.5.2", features = ["derive", "env"] }
dotenvy = { version = "0.15.7" }
opentelemetry = { version = "0.22.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.15.0", features = ["metrics", "tokio"] }
opentelemetry-semantic-conventions = { version = "0.14.0" }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
sea-orm = { version = "0.12.14", features = ["sqlx-mysql"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40" }
tracing-opentelemetry = { version = "0.23.0" }
tracing-subscriber = { version = "0.3.18" }
url = { version = "2.5.0" }

[build-dependencies]
built = { version = "0.7.1" }
